# SMESH

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  make_patch.py  prepare.py  smesh_changelog.md
.github/workflows/: ci.yml  create_release.yml
ci/conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
cmake/: SMESHConfig.cmake.in
cmake/Geom/: CMakeLists.txt
cmake/Kernel/: CMakeLists.txt
cmake/Netgen/: CMakeLists.txt
cmake/SMESH/: CMakeLists.txt
extra/MEFISTO2/: trte.c
extra/MeshVSLink/: Handle_SMESH_MeshVSLink.hxx  SMESH_MeshVSLink.cxx  SMESH_MeshVSLink.hxx  SMESH_MeshVSLink.ixx
extra/Netgen/: netgen_version.hpp
inc/: BLSURFPlugin_Attractor.hxx  BLSURFPlugin_BLSURF.hxx  BLSURFPlugin_Hypothesis.hxx  GEOMUtils.hxx  Handle_SMESH_MeshVSLink.hxx  NETGENPlugin_Defs.hxx  NETGENPlugin_Mesher.hxx  NETGENPlugin_NETGEN_2D_ONLY.hxx  NETGENPlugin_SimpleHypothesis_2D.hxx  Rn.h  SMDS_Mesh.hxx  SMDS_MeshElement.hxx  SMESH_Mesh.hxx  SMESH_MeshEditor.hxx  SMESH_MeshVSLink.hxx  SMESH_subMesh.hxx  SUIT.h  SUIT_SelectionFilter.h  StdMeshers_CartesianParameters3D.hxx  StdMeshers_CompositeHexa_3D.hxx  UNV_Utilities.hxx  Utils_CorbaException.hxx  Utils_ExceptHandlers.hxx  aptrte.h
patch/: GEOMUtils.patch  Kernel.patch  NETGENPlugin.patch  NETGENPlugin_Mesher.patch  SMDS_UnstructuredGrid.patch  SMESH.patch  SMESH_ControlPnt.patch  SMESH_Controls.patch  SMESH_Mesh.patch  SMESH_MeshAlgos.patch  SMESH_SMDS.patch  SMESH_Slot.patch  SMESH_swap_bool_vector.patch  StdMeshers_Adaptive1D.patch  StdMeshers_Projection_2D.patch  StdMeshers_ViscousLayers.patch  geom.patch  mefisto.patch  occgenmesh_OCCT76.patch
src/: CMakeLists.txt
src/BLSURFPlugin/: BLSURFPlugin_Attractor.cxx  BLSURFPlugin_BLSURF.cxx  BLSURFPlugin_Hypothesis.cxx
src/DriverCGNS/: DriverCGNS_Read.cxx
src/DriverUNV/: DriverUNV_R_SMDS_Mesh.cxx
src/MEFISTO2/: aptrte.cxx
src/NETGENPlugin/: NETGENPlugin_Mesher.cxx  NETGENPlugin_NETGEN_2D.cxx  NETGENPlugin_NETGEN_2D3D.cxx  NETGENPlugin_NETGEN_2D_ONLY.cxx  NETGENPlugin_NETGEN_3D.cxx  NETGENPlugin_SimpleHypothesis_2D.cxx
src/SMDS/: SMDS_Mesh.cxx
src/SMESH/: SMESH_Controls.cxx  SMESH_Gen.cxx  SMESH_LogicalFilter.cxx  SMESH_Mesh.cxx  SMESH_MeshAlgos.cxx  SMESH_MeshEditor.cxx  SMESH_MeshVSLink.cxx  SMESH_MesherHelper.cxx  SMESH_NumberFilter.cxx  SMESH_TypeFilter.cxx
src/StdMeshers/: StdMeshers_AutomaticLength.cxx  StdMeshers_Cartesian_3D.cxx  StdMeshers_Geometric1D.cxx  StdMeshers_Import_1D2D.cxx  StdMeshers_LayerDistribution.cxx  StdMeshers_MaxElementVolume.cxx  StdMeshers_NumberOfLayers.cxx  StdMeshers_NumberOfSegments.cxx  StdMeshers_ProjectionSource1D.cxx  StdMeshers_ProjectionSource2D.cxx  StdMeshers_ProjectionSource3D.cxx  StdMeshers_Projection_2D.cxx  StdMeshers_ViscousLayers.cxx  StdMeshers_ViscousLayers2D.cxx
src/Trace/: LocalTraceBufferPool.cxx
src/Utils/: GEOMUtils.cxx  Utils_ExceptHandlers.cxx
test/: CMakeLists.txt  Netgen.t.cpp
test/src/: Catch.t.cpp  MEFISTO2.t.cpp  NETGENPlugin.t.cpp  Netgen.t.cpp  SMESH.t.cpp  StdMeshers.t.cpp
tests/: CMakeLists.txt  unv_test.cpp
